[package]
name = "rsbuf"
version = "1.0.0"
edition = "2021"

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
wasm-bindgen = "0.2.95"
num-bigint = "0.4.6"
rsa = "0.9.6"
pem = "3.0.4"
num-traits = "0.2.19"
once_cell = "1.20.2"
getrandom = { version = "0.2.15", features = ["js"] }
web-sys = { version = "0.3", features = ["console"] }

[lib]
crate-type = ["cdylib", "lib"]

[[bench]]
name = "packet"
harness = false

[profile.release]
lto = "fat"
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "--generate-global-effects",
    "--optimize-instructions",
    "--memory-packing",
    "--intrinsic-lowering",
    "--flexible-inline-max-function-size",
    "4294967295",
    "--inlining",
    "--inlining-optimizing",
    "-O4",
]
